[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rytest"
version = "0.1.0"
description = "Pytest enhancements in Rust"
requires-python = ">=3.8"
dependencies = ["pytest>=7.0.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
rytest_collect = "rytest.collect:RytestCollector"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rytest_core"
python-packages = ["rytest"]
